--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone:
 
 title: Full-Field fMRI # the main title
 
-tagline:  # it will display as the sub-title
+tagline: setup information # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   
@@ -66,7 +66,7 @@ url: https://jpark203.github.io
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode: [light|dark]
+theme_mode: 
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
